Fix image alignment and sizing in article

--- a/shared/scss/components/cms/article.scss
+++ b/shared/scss/components/cms/article.scss
@@ -28,6 +28,15 @@
   .alignleft {
     margin: $base $base $base 0;
   }
+
+  img {
+    width: 100%;
+    height: auto;
+
+    @media(min-width: $width-sm) {
+      width: auto;
+    }
+  }
 }
 
 .article p {
