--- a/shared/scss/components/cms/layout.scss
+++ b/shared/scss/components/cms/layout.scss
@@ -20,7 +20,8 @@ body.category {
   float: left;
 }
 
-.aligncenter {
+.aligncenter,
+.alignnone {
   display: block;
   margin: auto;
 }
